2007-12-19  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

2007-12-19  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/__bar__.m: Handle "basevalue" option.
	* plot/__bars__.m: New arg, base_value.

2007-12-17  David Bateman  <dbateman@free.fr>

	* plot/rose.m, plot/feather.m, plot/compass.m: New functions
	* plot/Makefiles (SOURCES): Add them to the sources
	* plot/polar.m: Set the x and y limits to the maximum polar
	radius. Set the axes to be square.
	* plot/__go_draw_axes__.m: Allow {x|y}axislocation to be "zero"
	and print axis at zero if this is used.

	* plot/__go_draw_axes__.m: Use "set pm3d explicit" so that
	contours can overlay pcolor plots. Priveldge no hidden line
	removal when there are multiple objects in the plot.

2007-12-17  Peter A. Gustafson  <petegus@umich.edu>

	* plot/__go_draw_axes__.m:  Fix mirrored tics and borders for
	set (gca (), "[xy]axislocation", "{right|top}", "box", "off").

2007-12-17  Ben Abbott  <bpabbott@mac.com>

         * miscellaneous/run.m: Replace script with f when looking for
	 file to run.

2007-12-14  David Bateman  <dbateman@free.fr>

	* plot/contour3.m, plot/__contour__.m: Handle linespec.
	* plot/contour.m: Doc fix.
	* plot/__go_draw_axes__.m (case "patch"): Include "lt" in lt string.
	Include linetype in withclause.

	* plot/__go_draw_axes__.m (__calc_dimensions__): New function.
	Use it to determine dimensions.  Consolidate all 3-d settings.

2007-12-13  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Turn axis visibility off.
	Don't scale true color images.
	* image/image.m: Set axis layer property to "top".

2007-12-12  John W. Eaton  <jwe@octave.org>

	* image/loadimage.m: Avoid calling eval.  Avoid calling exist.

	* plot/pie.m: Avoid calling "exist".

	* linear-algebra/condest.m: Use nargin instead of size(varargin,2).	
	Condense argument processing logic.  Allow 6 arguments.