@@ -55,7 +55,7 @@
 ## @end deftypefn
 
 ## Author: Kai Habel <kai.habel@gmx.de>
-## Author: shaia
+## Author: Shai Ayal <shaiay@users.sourceforge.net>
 
 function varargout = contourf (varargin)
 
@@ -258,3 +258,9 @@ endfunction
 %!demo
 %! [x, y, z] = peaks (50);
 %! contourf (x, y, z, -7:9)
+
+%!demo
+%! [th, r] = meshgrid (linspace (0, 2*pi, 64), 0:.05:0.9);
+%! [X, Y] = pol2cart (th, r);
+%! f = ((X + i*Y).^4 - 1).^(1/4);
+%! contourf(X, Y, abs(f), 16)
